added master branch

--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -84,4 +84,4 @@ jobs:
       - name: output info
         run: |
           echo "something went wrong"
-          echo "${{ github }}"
+          echo "${{ toJSON(github) }}"
